Sync version with Spring Boot