@@ -1,9 +1,7 @@
 package dev.ercan.jaxws.spring.factory;
 
-import com.sun.istack.NotNull;
 import com.sun.xml.ws.api.BindingID;
 import com.sun.xml.ws.api.WSBinding;
-import com.sun.xml.ws.api.databinding.MetadataReader;
 import com.sun.xml.ws.api.pipe.TubelineAssembler;
 import com.sun.xml.ws.api.pipe.TubelineAssemblerFactory;
 import com.sun.xml.ws.api.server.BoundEndpoint;
@@ -17,11 +15,12 @@ import com.sun.xml.ws.binding.BindingImpl;
 import com.sun.xml.ws.server.EndpointFactory;
 import com.sun.xml.ws.server.ServerRtException;
 import com.sun.xml.ws.util.xml.XmlUtil;
+import jakarta.annotation.Nonnull;
 import jakarta.servlet.ServletContext;
 import jakarta.xml.ws.WebServiceFeature;
 import jakarta.xml.ws.handler.Handler;
-import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -29,50 +28,69 @@ import java.util.List;
 import javax.xml.namespace.QName;
 import org.springframework.beans.factory.FactoryBean;
 import org.springframework.beans.factory.InitializingBean;
+import org.springframework.util.CollectionUtils;
 import org.springframework.web.context.ServletContextAware;
 import org.xml.sax.EntityResolver;
 
-public class SoapServiceFactory implements FactoryBean<WSEndpoint>, ServletContextAware,
-    InitializingBean {
-  @NotNull
+/**
+ * Spring FactoryBean for creating and configuring JAX-WS {@link WSEndpoint} instances.
+ * This factory integrates JAX-WS with the Spring lifecycle and dependency injection.
+ */
+public class SoapServiceFactory implements FactoryBean<WSEndpoint>, ServletContextAware, InitializingBean {
+
+  /** The implementation class of the service. */
   private Class<?> implType;
+  /** The invoker used to call methods on the service instance. */
   private Invoker invoker;
-  private QName serviceName;
-  private QName portName;
-  private Container container;
-  private SDDocumentSource primaryWsdl;
-  private Object primaryWSDLResource;
-  private Collection<? extends SDDocumentSource> metadata;
-  private Collection<Object> metadataResources;
-  private EntityResolver resolver;
-  private Object assembler;
-  private WSBinding binding;
-  private BindingID bindingID;
-  private List<WebServiceFeature> features;
-  private List<Handler> handlers;
-  private ServletContext servletContext;
+  /** The cached endpoint instance. */
   private WSEndpoint<?> endpoint;
+  /** The explicit WSBinding to use. */
+  private WSBinding binding;
+  /** The binding ID (e.g., SOAP 1.1/1.2). */
+  private BindingID bindingID;
+  /** List of WebServiceFeatures to apply. */
+  private List<WebServiceFeature> features;
+  /** List of SOAP handlers for the handler chain. */
+  private List<Handler> handlers;
+  /** The resolved primary WSDL source. */
+  private SDDocumentSource primaryWsdl;
+  /** The raw primary WSDL resource (String, URL, or Source). */
+  private Object primaryWSDLResource;
+  /** The servlet context for resource resolution. */
+  private ServletContext servletContext;
+  /** Custom entity resolver for XML catalogs. */
+  private EntityResolver resolver;
+  /** The service QName. */
+  private QName serviceName;
+  /** The port QName. */
+  private QName portName;
+  /** Resolved additional metadata sources. */
+  private Collection<? extends SDDocumentSource> metadata;
+  /** Raw metadata resources. */
+  private Collection<Object> metadataResources;
+  /** Custom tubeline assembler. */
+  private Object assembler;
+  /** Parent container for SPI lookups. */
+  private Container container;
 
-  public void setServletContext(ServletContext servletContext) {
-    this.servletContext = servletContext;
+  /**
+   * Default constructor.
+   */
+  public SoapServiceFactory() {
   }
 
-  public void setImpl(Class implType) {
-    this.implType = implType;
-  }
-
-  public void setBean(Object sei) {
-    this.invoker = InstanceResolver.createSingleton(sei).createInvoker();
-    if (this.implType == null) {
-      this.implType = sei.getClass();
-    }
-
-  }
-
+  /**
+   * Sets the invoker for method dispatching.
+   * @param invoker the invoker instance
+   */
   public void setInvoker(Invoker invoker) {
     this.invoker = invoker;
   }
 
+  /**
+   * Sets the custom tubeline assembler or factory.
+   * @param assembler a {@link TubelineAssembler} or {@link TubelineAssemblerFactory}
+   */
   public void setAssembler(Object assembler) {
     if (!(assembler instanceof TubelineAssembler) && !(assembler instanceof TubelineAssemblerFactory)) {
       throw new IllegalArgumentException("Invalid type for assembler " + assembler);
@@ -81,46 +99,92 @@ public class SoapServiceFactory implements FactoryBean<WSEndpoint>, ServletConte
     }
   }
 
+  /**
+   * Sets the service qualified name.
+   * @param serviceName the service name
+   */
   public void setServiceName(QName serviceName) {
     this.serviceName = serviceName;
   }
 
+  /**
+   * Sets the port qualified name.
+   * @param portName the port name
+   */
   public void setPortName(QName portName) {
     this.portName = portName;
   }
 
+  /**
+   * Sets the parent container.
+   * @param container the container
+   */
   public void setContainer(Container container) {
     this.container = container;
   }
 
+  /**
+   * Sets the web service binding instance.
+   * @param binding the binding
+   */
   public void setBinding(WSBinding binding) {
     this.binding = binding;
   }
 
+  /**
+   * Sets the binding ID string.
+   * @param id the binding ID
+   */
   public void setBindingID(String id) {
     this.bindingID = BindingID.parse(id);
   }
 
+  /**
+   * Sets the list of web service features.
+   * @param features the features
+   */
   public void setFeatures(List<WebServiceFeature> features) {
     this.features = features;
   }
 
+  /**
+   * Sets the list of SOAP handlers.
+   * @param handlers the handlers
+   */
   public void setHandlers(List<Handler> handlers) {
     this.handlers = handlers;
   }
 
-  public void setPrimaryWsdl(Object primaryWsdl) throws IOException {
-    this.primaryWSDLResource = primaryWsdl;
+  /**
+   * Sets the primary WSDL resource path or object.
+   * @param primaryWSDLResource the WSDL resource
+   */
+  public void setPrimaryWSDLResource(Object primaryWSDLResource) {
+    this.primaryWSDLResource = primaryWSDLResource;
   }
 
+  /**
+   * Sets the additional metadata resources.
+   * @param metadata the metadata collection
+   */
   public void setMetadata(Collection<Object> metadata) {
     this.metadataResources = metadata;
   }
 
+  /**
+   * Sets the entity resolver for XML catalog resolution.
+   * @param resolver the entity resolver
+   */
   public void setResolver(EntityResolver resolver) {
     this.resolver = resolver;
   }
 
+  /**
+   * Creates or returns the cached WSEndpoint.
+   * @return the endpoint
+   * @throws Exception if creation fails
+   */
+  @Override
   public WSEndpoint<?> getObject() throws Exception {
     if (this.endpoint == null) {
       if (this.binding == null) {
@@ -128,11 +192,12 @@ public class SoapServiceFactory implements FactoryBean<WSEndpoint>, ServletConte
           this.bindingID = BindingID.parse(this.implType);
         }
 
-        if (this.features != null && !this.features.isEmpty()) {
-          this.binding = BindingImpl.create(this.bindingID, (WebServiceFeature[])this.features.toArray(new WebServiceFeature[this.features.size()]));
-        } else {
+        if (CollectionUtils.isEmpty(this.features)) {
           this.binding = BindingImpl.create(this.bindingID);
+        } else {
+          this.binding = BindingImpl.create(this.bindingID, this.features.toArray(new WebServiceFeature[0]));
         }
+
       } else {
         if (this.bindingID != null) {
           throw new IllegalStateException("Both bindingID and binding are configured");
@@ -150,29 +215,43 @@ public class SoapServiceFactory implements FactoryBean<WSEndpoint>, ServletConte
       }
 
       if (this.primaryWsdl == null) {
-        EndpointFactory.verifyImplementorClass(this.implType, (MetadataReader)null);
+        EndpointFactory.verifyImplementorClass(this.implType, null);
         String wsdlLocation = EndpointFactory.getWsdlLocation(this.implType);
         if (wsdlLocation != null) {
           this.primaryWsdl = this.convertStringToSource(wsdlLocation);
         }
       }
 
-      EntityResolver resolver = this.resolver;
-      if (resolver == null) {
+      EntityResolver entityResolver = this.resolver;
+      if (entityResolver == null) {
         if (this.servletContext != null) {
-          resolver = XmlUtil.createEntityResolver(this.servletContext.getResource("/WEB-INF/jax-ws-catalog.xml"));
+          entityResolver = XmlUtil.createEntityResolver(this.servletContext.getResource("/WEB-INF/jax-ws-catalog.xml"));
         } else {
-          resolver = XmlUtil.createEntityResolver(this.getClass().getClassLoader().getResource("/META-INF/jax-ws-catalog.xml"));
+          entityResolver = XmlUtil.createEntityResolver(this.getClass().getClassLoader().getResource("/META-INF/jax-ws-catalog.xml"));
         }
       }
 
-      this.endpoint = WSEndpoint.create(this.implType, false, this.invoker, this.serviceName, this.portName, new ContainerWrapper(), this.binding, this.primaryWsdl, this.metadata, resolver, true);
+      this.endpoint = WSEndpoint.create(this.implType, false, this.invoker, this.serviceName, this.portName,
+          new ContainerWrapper(), this.binding, this.primaryWsdl, this.metadata, entityResolver, true);
     }
 
     return this.endpoint;
   }
 
-  public void afterPropertiesSet() throws Exception {
+  /**
+   * Returns the type of object produced by this factory.
+   * @return {@code WSEndpoint.class}
+   */
+  @Override
+  public Class<?> getObjectType() {
+    return WSEndpoint.class;
+  }
+
+  /**
+   * Resolves resources after properties are set by Spring.
+   */
+  @Override
+  public void afterPropertiesSet() {
     if (this.primaryWSDLResource != null) {
       this.primaryWsdl = this.resolveSDDocumentSource(this.primaryWSDLResource);
     }
@@ -180,38 +259,45 @@ public class SoapServiceFactory implements FactoryBean<WSEndpoint>, ServletConte
     if (this.metadataResources != null) {
       List<SDDocumentSource> tempList = new ArrayList<>(this.metadataResources.size());
 
-      for(Object resource : this.metadataResources) {
+      for (Object resource : this.metadataResources) {
         tempList.add(this.resolveSDDocumentSource(resource));
       }
 
       this.metadata = tempList;
     }
-
   }
 
-  private SDDocumentSource resolveSDDocumentSource(Object resource) {
-    SDDocumentSource source;
-    if (resource instanceof String) {
-      source = this.convertStringToSource((String)resource);
-    } else if (resource instanceof URL) {
-      source = SDDocumentSource.create((URL)resource);
-    } else {
-      if (!(resource instanceof SDDocumentSource)) {
-        throw new IllegalArgumentException("Unknown type \"" + resource.getClass().getName() + "\" for resource " + resource);
-      }
+  /**
+   * Sets the servlet context.
+   * @param servletContext the context
+   */
+  @Override
+  public void setServletContext(@Nonnull ServletContext servletContext) {
+    this.servletContext = servletContext;
+  }
 
-      source = (SDDocumentSource)resource;
+  /**
+   * Sets a Spring bean as the service instance (singleton invoker).
+   * @param sei the service instance
+   */
+  public void setBean(Object sei) {
+    this.invoker = InstanceResolver.createSingleton(sei).createInvoker();
+    if (this.implType == null) {
+      this.implType = sei.getClass();
     }
-
-    return source;
   }
 
+  /**
+   * Converts a string location to an {@link SDDocumentSource}.
+   * @param resourceLocation the location path
+   * @return the source
+   */
   private SDDocumentSource convertStringToSource(String resourceLocation) {
     URL url = null;
     if (this.servletContext != null) {
       try {
         url = this.servletContext.getResource(resourceLocation);
-      } catch (MalformedURLException var5) {
+      } catch (MalformedURLException ignored) {
       }
     }
 
@@ -222,66 +308,91 @@ public class SoapServiceFactory implements FactoryBean<WSEndpoint>, ServletConte
 
     if (url == null) {
       try {
-        url = new URL(resourceLocation);
-      } catch (MalformedURLException var4) {
+        url = URI.create(resourceLocation).toURL();
+      } catch (MalformedURLException | IllegalArgumentException ignored) {
       }
     }
 
     if (url == null) {
-      throw new ServerRtException("cannot.load.wsdl", new Object[]{resourceLocation});
+      throw new ServerRtException("cannot.load.wsdl", resourceLocation);
     } else {
       return SDDocumentSource.create(url);
     }
   }
 
-  public boolean isSingleton() {
-    return true;
+  /**
+   * Resolves a generic resource object into an {@link SDDocumentSource}.
+   * @param resource the resource (String, URL, or Source)
+   * @return the resolved source
+   */
+  private SDDocumentSource resolveSDDocumentSource(Object resource) {
+    if (resource instanceof String resourceLocation) {
+      return this.convertStringToSource(resourceLocation);
+    } else if (resource instanceof URL url) {
+      return SDDocumentSource.create(url);
+    } else if (resource instanceof SDDocumentSource sdDocumentSource) {
+      return sdDocumentSource;
+    }
+    throw new IllegalArgumentException("Unknown type \"" + resource.getClass().getName() + "\" for resource " + resource);
   }
 
-  public Class<WSEndpoint> getObjectType() {
-    return WSEndpoint.class;
-  }
-
+  /**
+   * Internal JAX-WS Container wrapper for Spring integration.
+   */
   private class ContainerWrapper extends Container {
+
+    /** The associated module. */
     private final Module module;
 
+    /**
+     * Creates a new wrapper instance.
+     */
     private ContainerWrapper() {
       this.module = new Module() {
-        private final List<BoundEndpoint> endpoints = new ArrayList();
+        private final List<BoundEndpoint> endpoints = new ArrayList<>();
 
-        @NotNull
+        @Override
+        @Nonnull
         public List<BoundEndpoint> getBoundEndpoints() {
           return this.endpoints;
         }
       };
     }
 
+    /**
+     * Resolves SPI implementations.
+     * @param spiType the SPI class
+     * @param <T> the type
+     * @return the implementation or null
+     */
+    @Override
     public <T> T getSPI(Class<T> spiType) {
       if (spiType == TubelineAssemblerFactory.class) {
         if (SoapServiceFactory.this.assembler instanceof TubelineAssemblerFactory) {
-          return (T)spiType.cast(SoapServiceFactory.this.assembler);
+          return spiType.cast(SoapServiceFactory.this.assembler);
         }
 
-        if (SoapServiceFactory.this.assembler instanceof TubelineAssembler) {
-          return (T)spiType.cast(new TubelineAssemblerFactory() {
+        if (SoapServiceFactory.this.assembler instanceof TubelineAssembler ta) {
+          return spiType.cast(new TubelineAssemblerFactory() {
+            @Override
             public TubelineAssembler doCreate(BindingID bindingId) {
-              return (TubelineAssembler) SoapServiceFactory.this.assembler;
+              return ta;
             }
           });
         }
       }
 
       if (spiType == ServletContext.class) {
-        return (T)spiType.cast(SoapServiceFactory.this.servletContext);
+        return spiType.cast(SoapServiceFactory.this.servletContext);
       } else {
         if (SoapServiceFactory.this.container != null) {
-          T t = (T) SoapServiceFactory.this.container.getSPI(spiType);
+          T t = SoapServiceFactory.this.container.getSPI(spiType);
           if (t != null) {
             return t;
           }
         }
 
-        return (T)(spiType == Module.class ? spiType.cast(this.module) : null);
+        return (spiType == Module.class ? spiType.cast(this.module) : null);
       }
     }
   }
